--- a/EcommerceSite/Views/_ViewImports.cshtml
+++ b/EcommerceSite/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using EcommerceSite
 @using EcommerceSite.Models
+@using EcommerceSite.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
