--- a/EcommerceSite/Views/Home/Index.cshtml
+++ b/EcommerceSite/Views/Home/Index.cshtml
@@ -16,52 +16,37 @@
                             }
                         }
                     }'>
-                <div class="intro-slide" style="background-image: url(assets/images/demos/demo-4/slider/slide-1.png);">
-                    <div class="container intro-content">
-                        <div class="row justify-content-end">
-                            <div class="col-auto col-sm-7 col-md-6 col-lg-5">
-                                <h3 class="intro-subtitle text-third">Deals and Promotions</h3><!-- End .h3 intro-subtitle -->
-                                <h1 class="intro-title">Beats by</h1>
-                                <h1 class="intro-title">Dre Studio 3</h1><!-- End .intro-title -->
+                @foreach (var item in Model.Deals)
+                {
 
-                                <div class="intro-price">
-                                    <sup class="intro-old-price">$349,95</sup>
-                                    <span class="text-third">
-                                        $279<sup>.99</sup>
-                                    </span>
-                                </div><!-- End .intro-price -->
+                    <div class="intro-slide" style="background-image:url(images/Deals/@item.Image)">
+                        @*<img src="~/images/Deals/@item.Image" />*@
+                        <div class="container intro-content">
+                            <div class="row justify-content-end">
+                                <div class="col-auto col-sm-7 col-md-6 col-lg-5">
+                                    <h3 class="intro-subtitle text-third">@item.Title</h3><!-- End .h3 intro-subtitle -->
+                                    <h1 class="intro-title">@item.Name</h1>
 
-                                <a href="category.html" class="btn btn-primary btn-round">
-                                    <span>Shop More</span>
-                                    <i class="icon-long-arrow-right"></i>
-                                </a>
-                            </div><!-- End .col-lg-11 offset-lg-1 -->
-                        </div><!-- End .row -->
-                    </div><!-- End .intro-content -->
-                </div><!-- End .intro-slide -->
+                                    <div class="intro-price">
+                                        @if (item.PastPrice != 0)
+                                        {
+                                            <sup class="intro-old-price">$@item.PastPrice</sup>
 
-                <div class="intro-slide" style="background-image: url(assets/images/demos/demo-4/slider/slide-2.png);">
-                    <div class="container intro-content">
-                        <div class="row justify-content-end">
-                            <div class="col-auto col-sm-7 col-md-6 col-lg-5">
-                                <h3 class="intro-subtitle text-primary">New Arrival</h3><!-- End .h3 intro-subtitle -->
-                                <h1 class="intro-title">Apple iPad Pro <br>12.9 Inch, 64GB </h1><!-- End .intro-title -->
+                                        }
+                                        <span class="text-third">
+                                            $@item.PresentPrice
+                                        </span>
+                                    </div><!-- End .intro-price -->
 
-                                <div class="intro-price">
-                                    <sup>Today:</sup>
-                                    <span class="text-primary">
-                                        $999<sup>.99</sup>
-                                    </span>
-                                </div><!-- End .intro-price -->
-
-                                <a href="category.html" class="btn btn-primary btn-round">
-                                    <span>Shop More</span>
-                                    <i class="icon-long-arrow-right"></i>
-                                </a>
-                            </div><!-- End .col-md-6 offset-md-6 -->
-                        </div><!-- End .row -->
-                    </div><!-- End .intro-content -->
-                </div><!-- End .intro-slide -->
+                                    <a href="category.html" class="btn btn-primary btn-round">
+                                        <span>Shop More</span>
+                                        <i class="icon-long-arrow-right"></i>
+                                    </a>
+                                </div><!-- End .col-lg-11 offset-lg-1 -->
+                            </div><!-- End .row -->
+                        </div><!-- End .intro-content -->
+                    </div><!-- End .intro-slide -->
+                }
             </div><!-- End .intro-slider owl-carousel owl-simple -->
 
             <span class="slider-loader"></span><!-- End .slider-loader -->
@@ -95,46 +80,25 @@
 
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-md-6 col-lg-4">
-                    <div class="banner banner-overlay banner-overlay-light">
-                        <a href="#">
-                            <img src="~/assets/images/demos/demo-4/banners/banner-1.png" alt="Banner">
-                        </a>
+                @foreach (var item in Model.Deals)
+                {
+                    <div class="col-md-6 col-lg-4">
 
-                        <div class="banner-content">
-                            <h4 class="banner-subtitle"><a href="#">Smart Offer</a></h4><!-- End .banner-subtitle -->
-                            <h3 class="banner-title"><a href="#">Save $150 <strong>on Samsung <br>Galaxy Note9</strong></a></h3><!-- End .banner-title -->
-                            <a href="#" class="banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
-                        </div><!-- End .banner-content -->
-                    </div><!-- End .banner -->
-                </div><!-- End .col-md-4 -->
-                <div class="col-md-6 col-lg-4">
-                    <div class="banner banner-overlay banner-overlay-light">
-                        <a href="#">
-                            <img src="~/assets/images/demos/demo-4/banners/banner-2.jpg" alt="Banner">
-                        </a>
 
-                        <div class="banner-content">
-                            <h4 class="banner-subtitle"><a href="#">Time Deals</a></h4><!-- End .banner-subtitle -->
-                            <h3 class="banner-title"><a href="#"><strong>Bose SoundSport</strong> <br>Time Deal -30%</a></h3><!-- End .banner-title -->
-                            <a href="#" class="banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
-                        </div><!-- End .banner-content -->
-                    </div><!-- End .banner -->
-                </div><!-- End .col-md-4 -->
+                        <div class="banner banner-overlay banner-overlay-light">
+                            <a href="#">
+                                <img src="~/images/Deals/@item.Image" style="height:150px;" alt="Banner">
+                            </a>
 
-                <div class="col-md-6 col-lg-4">
-                    <div class="banner banner-overlay banner-overlay-light">
-                        <a href="#">
-                            <img src="~/assets/images/demos/demo-4/banners/banner-3.png" alt="Banner">
-                        </a>
-
-                        <div class="banner-content">
-                            <h4 class="banner-subtitle"><a href="#">Clearance</a></h4><!-- End .banner-subtitle -->
-                            <h3 class="banner-title"><a href="#"><strong>GoPro - Fusion 360</strong> <br>Save $70</a></h3><!-- End .banner-title -->
-                            <a href="#" class="banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
-                        </div><!-- End .banner-content -->
-                    </div><!-- End .banner -->
-                </div><!-- End .col-lg-4 -->
+                            <div class="banner-content">
+                                <h4 class="banner-subtitle"><a>@item.Title</a></h4><!-- End .banner-subtitle -->
+                                <h3 class="banner-title"><a href="#" style="color:red;">$@item.PresentPrice <strong>@item.Name</strong></a></h3><!-- End .banner-title -->
+                                <a href="#" class="banner-link">Shop Now<i class="icon-long-arrow-right"></i></a>
+                            </div><!-- End .banner-content -->
+                        </div>
+                        <!-- End .banner -->
+                    </div>
+                }<!-- End .col-md-4 -->
             </div><!-- End .row -->
         </div><!-- End .container -->
 
