--- a/EcommerceSite/Views/Shared/_Layout.cshtml
+++ b/EcommerceSite/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <meta name="author" content="p-themes">
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="~/assets/images/icons/apple-touch-icon.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
     <link rel="icon" type="image/png" sizes="32x32" href="~/assets/images/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="~/assets/images/icons/favicon-16x16.png">
     <link rel="manifest" href="~/assets/images/icons/site.html">
@@ -32,7 +33,7 @@
     <link rel="stylesheet" href="~/assets/css/demos/demo-4.css">
 </head>
 <body>
-    <div >
+    <div>
         <header class="header header-intro-clearance">
             <div class="header-bottom sticky-header">
                 <div class="container">
@@ -260,7 +261,7 @@
         </header>
     </div>
     <div>
-            @RenderBody()
+        @RenderBody()
     </div>
 
     <footer class="footer">
