--- a/EcommerceSite/Views/Category/Index.cshtml
+++ b/EcommerceSite/Views/Category/Index.cshtml
@@ -158,108 +158,112 @@
                         </nav>
                     </div><!-- End .col-lg-9 -->
                     <aside class="col-lg-3 order-lg-first">
-                        <div class="sidebar sidebar-shop">
-                            <div class="widget widget-clean">
-                                <label>Filters:</label>
-                                <a href="#" class="sidebar-filter-clear">Clean All</a>
-                            </div><!-- End .widget widget-clean -->
+                        <form asp-controller="Filter" asp-action="Index">
+                            <div class="sidebar sidebar-shop">
+                                <div class="widget widget-clean">
+                                    <label>Filters:</label>
+                                    <a href="#" class="sidebar-filter-clear">Clean All</a>
+                                </div><!-- End .widget widget-clean -->
 
-                            <div class="widget widget-collapsible">
-                                <h3 class="widget-title">
-                                    <a data-toggle="collapse" href="#widget-1" role="button" aria-expanded="true" aria-controls="widget-1">
-                                        Category
-                                    </a>
-                                </h3><!-- End .widget-title -->
+                                <div class="widget widget-collapsible">
+                                    <h3 class="widget-title">
+                                        <a data-toggle="collapse" href="#widget-1" role="button" aria-expanded="true" aria-controls="widget-1">
+                                            Category
+                                        </a>
+                                    </h3><!-- End .widget-title -->
 
-                                <div class="collapse show" id="widget-1">
-                                    <div class="widget-body">
-                                        <div class="filter-items filter-items-count">
-                                            @foreach (var item in Model.Categories)
-                                            {
-
-                                                <div class="filter-item">
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="radio" name="drone" class="custom-control-input categories" value="@item.Id" id="@item.className">
-                                                        <label class="custom-control-label" for="@item.className">@item.Name</label>
-                                                    </div><!-- End .custom-checkbox -->
-                                                    <span class="item-count">@item.Products.Count</span>
-                                                </div><!-- End .filter-item -->
-                                            }
-                                            <input type="hidden" name="cate" id="cate" />
-                                        </div><!-- End .filter-items -->
-                                    </div><!-- End .widget-body -->
-                                </div><!-- End .collapse -->
-                            </div><!-- End .widget -->
-
-                            <div class="widget widget-collapsible">
-                                <h3 class="widget-title">
-                                    <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="true" aria-controls="widget-2">
-                                        Size
-                                    </a>
-                                </h3><!-- End .widget-title -->
-
-                                <div class="collapse show" id="widget-2">
-                                    <div class="widget-body">
-                                        <div class="filter-items">
-                                            <div class="filter-item">
-                                                @foreach (var item in Model.Sizes)
+                                    <div class="collapse show" id="widget-1">
+                                        <div class="widget-body">
+                                            <div class="filter-items filter-items-count">
+                                                @foreach (var item in Model.Categories)
                                                 {
-                                                    <div class="custom-control custom-checkbox">
-                                                        <input type="radio" name="radi" class="custom-control-input sizers" value="@item.id" id="@item.Name">
-                                                        <label class="custom-control-label" for="@item.Name">@item.Name</label>
-                                                    </div><!-- End .custom-checkbox -->
+
+                                                    <div class="filter-item">
+                                                        <div class="custom-control custom-checkbox">
+                                                            <input type="radio" name="drone" class="custom-control-input categories" value="@item.Id" id="@item.className">
+                                                            <label class="custom-control-label" for="@item.className">@item.Name</label>
+                                                        </div><!-- End .custom-checkbox -->
+                                                        <span class="item-count">@item.Products.Count</span>
+                                                    </div><!-- End .filter-item -->
                                                 }
-                                                <input type="hidden" name="size" id="sizer" />
+                                                <input type="hidden" name="cate" id="cate" />
+                                            </div><!-- End .filter-items -->
+                                        </div><!-- End .widget-body -->
+                                    </div><!-- End .collapse -->
+                                </div><!-- End .widget -->
+
+                                <div class="widget widget-collapsible">
+                                    <h3 class="widget-title">
+                                        <a data-toggle="collapse" href="#widget-2" role="button" aria-expanded="true" aria-controls="widget-2">
+                                            Size
+                                        </a>
+                                    </h3><!-- End .widget-title -->
+
+                                    <div class="collapse show" id="widget-2">
+                                        <div class="widget-body">
+                                            <div class="filter-items">
+                                                <div class="filter-item">
+                                                    @foreach (var item in Model.Sizes)
+                                                    {
+                                                        <div class="custom-control custom-checkbox">
+                                                            <input type="radio" name="radi" class="custom-control-input sizers" value="@item.id" id="@item.Name">
+                                                            <label class="custom-control-label" for="@item.Name">@item.Name</label>
+                                                        </div><!-- End .custom-checkbox -->
+                                                    }
+                                                    <input type="hidden" name="size" id="sizer" />
 
 
-                                            </div><!-- End .filter-item -->
-                                        </div><!-- End .filter-items -->
-                                    </div><!-- End .widget-body -->
-                                </div><!-- End .collapse -->
-                            </div><!-- End .widget -->
+                                                </div><!-- End .filter-item -->
+                                            </div><!-- End .filter-items -->
+                                        </div><!-- End .widget-body -->
+                                    </div><!-- End .collapse -->
+                                </div><!-- End .widget -->
 
-                            <div class="widget widget-collapsible">
-                                <h3 class="widget-title">
-                                    <a data-toggle="collapse" href="#widget-3" role="button" aria-expanded="true" aria-controls="widget-3">
-                                        Colour
-                                    </a>
-                                </h3><!-- End .widget-title -->
+                                <div class="widget widget-collapsible">
+                                    <h3 class="widget-title">
+                                        <a data-toggle="collapse" href="#widget-3" role="button" aria-expanded="true" aria-controls="widget-3">
+                                            Colour
+                                        </a>
+                                    </h3><!-- End .widget-title -->
 
-                                <div class="collapse show" id="widget-3">
-                                    <div class="widget-body">
-                                        <div class="filter-colors">
-                                            @foreach (var item in Model.Colors)
-                                            {
-                                                <a data-id="@item.Id" style="background: @item.Name;" class="colorinput"><span class="sr-only">Color Name</span></a>
-                                                @*<a href="#" class="selected" style="background: #cc3333;"><span class="sr-only">Color Name</span></a>*@
-                                            }
-                                            <input type="hidden" name="coloin" id="coloin" />
+                                    <div class="collapse show" id="widget-3">
+                                        <div class="widget-body">
+                                            <div class="filter-colors">
+                                                @foreach (var item in Model.Colors)
+                                                {
+                                                    <a data-id="@item.Id" style="background: @item.Name;" class="colorinput"><span class="sr-only">Color Name</span></a>
+                                                    @*<a href="#" class="selected" style="background: #cc3333;"><span class="sr-only">Color Name</span></a>*@
+                                                }
+                                                <input type="hidden" name="coloin" id="coloin" />
 
-                                        </div><!-- End .filter-colors -->
-                                    </div><!-- End .widget-body -->
-                                </div><!-- End .collapse -->
-                            </div><!-- End .widget -->
+                                            </div><!-- End .filter-colors -->
+                                        </div><!-- End .widget-body -->
+                                    </div><!-- End .collapse -->
+                                </div><!-- End .widget -->
 
 
 
-                            <div class="widget widget-collapsible">
-                                <h3 class="widget-title">
-                                    <a data-toggle="collapse" href="#widget-5" role="button" aria-expanded="true" aria-controls="widget-5">
-                                        Price
-                                    </a>
+                                <div class="widget widget-collapsible">
+                                    <h3 class="widget-title">
+                                        <a data-toggle="collapse" href="#widget-5" role="button" aria-expanded="true" aria-controls="widget-5">
+                                            Price
+                                        </a>
 
-                                </h3><!-- End .widget-title -->
+                                    </h3><!-- End .widget-title -->
 
-                                <div class="collapse show" id="widget-5">
-                                    <div class="widget-body">
-                                        <input type="range" name="range" step="5" min="10" max="1000" style="width:300px;" value="" onchange="rangePrimary.value=value">
-                                        <br />
-                                        <input type="text" id="rangePrimary" name="rangePrimary" /><!-- End .filter-price -->
-                                    </div><!-- End .widget-body -->
-                                </div><!-- End .collapse -->
-                            </div><!-- End .widget -->
-                        </div><!-- End .sidebar sidebar-shop -->
+                                    <div class="collapse show" id="widget-5">
+                                        <div class="widget-body">
+                                            <input type="range" name="range" step="5" min="10" max="1000" style="width:300px;" value="" onchange="rangePrimary.value=value">
+                                            <br />
+                                            <input type="text" id="rangePrimary" name="rangePrimary" /><!-- End .filter-price -->
+                                        </div><!-- End .widget-body -->
+                                    </div><!-- End .collapse -->
+                                </div><!-- End .widget -->
+                            </div><!-- End .sidebar sidebar-shop -->
+                            <button class="btn btn-success" type="submit"> Submit</button>
+                        </form>
                     </aside><!-- End .col-lg-3 -->
+
                 </div><!-- End .row -->
             </div><!-- End .container -->
         </div><!-- End .page-content -->
@@ -290,7 +294,6 @@
 
                 })
             });
-
             $(document).ready(function () {
                 console.log("isledi");
                 $(".colorinput").each(function (e) {
