--- a/EcommerceSite/Views/_ViewImports.cshtml
+++ b/EcommerceSite/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using EcommerceSite
 @using EcommerceSite.Models
 @using EcommerceSite.ViewModel
+@using EcommerceSite.Helper
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
