--- a/EcommerceSite/Views/Blog/Index.cshtml
+++ b/EcommerceSite/Views/Blog/Index.cshtml
@@ -55,23 +55,11 @@
                         }
                     </article><!-- End .entry -->
                     <nav aria-label="Page navigation">
-                        <ul class="pagination">
-                            <li class="page-item disabled">
-                                <a class="page-link page-link-prev" href="#" aria-label="Previous" tabindex="-1" aria-disabled="true">
-                                    <span aria-hidden="true"><i class="icon-long-arrow-left"></i></span>Prev
-                                </a>
-                            </li>
-                            <li class="page-item active" aria-current="page"><a class="page-link" href="#">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item">
-                                <a class="page-link page-link-next" href="#" aria-label="Next">
-                                    Next <span aria-hidden="true"><i class="icon-long-arrow-right"></i></span>
-                                </a>
-                            </li>
-                        </ul>
+                        <div id="pagination">
+                            <partial name="_PaginationPartial" model="Model.Pagination" />
+                        </div>
                     </nav>
                 </div><!-- End .col-lg-9 -->
-
                 @await Component.InvokeAsync("VcBlog")
             </div><!-- End .row -->
         </div><!-- End .container -->
