--- a/EcommerceSite/Views/CheckOut/Index.cshtml
+++ b/EcommerceSite/Views/CheckOut/Index.cshtml
@@ -74,28 +74,35 @@
                                     </thead>
 
                                     <tbody>
-                                        <tr>
-                                            <td><a href="#">Beige knitted elastic runner shoes</a></td>
-                                            <td>$84.00</td>
-                                        </tr>
+                                        @if (ViewBag.cart != null)
+                                        {
+                                            @foreach (var item in ViewBag.cart)
+                                            {
+                                                <tr>
 
-                                        <tr>
-                                            <td><a href="#">Blue utility pinafore denimdress</a></td>
-                                            <td>$76,00</td>
-                                        </tr>
+                                                    <td><a href="#">@item.Product.Name X<span class="product-qty">@item.Quantity</span></a></td>
+                                                    <td>$@item.Product.PresentPrice</td>
+
+                                                </tr>
+
+                                            }
+                                        }
+                                    </tbody>
+                                    <tfoot>
                                         <tr class="summary-subtotal">
                                             <td>Subtotal:</td>
-                                            <td>$160.00</td>
+
+                                            @if(ViewBag.total!=null)
+                                            {
+                                                <td>@ViewBag.total</td>
+
+                                            }
                                         </tr><!-- End .summary-subtotal -->
                                         <tr>
                                             <td>Shipping:</td>
                                             <td>Free shipping</td>
                                         </tr>
-                                        <tr class="summary-total">
-                                            <td>Total:</td>
-                                            <td>$160.00</td>
-                                        </tr><!-- End .summary-total -->
-                                    </tbody>
+                                    </tfoot>
                                 </table><!-- End .table table-summary -->
 
                                 <div class="accordion-summary" id="accordion-payment">
