--- a/EcommerceSite/Views/Shared/Components/VcCategory/Default.cshtml
+++ b/EcommerceSite/Views/Shared/Components/VcCategory/Default.cshtml
@@ -11,7 +11,7 @@
                     <ul class="menu-vertical sf-arrows">
                         @foreach (var item in Model)
                         {
-                            <li><a href="#">@item.Name </a></li>
+                            <li><a href="/category/index/@item.Id">@item.Name </a></li>
                         }
                     </ul><!-- End .menu-vertical -->
                 </nav><!-- End .side-nav -->
