--- a/EcommerceSite/Views/Shared/_Layout.cshtml
+++ b/EcommerceSite/Views/Shared/_Layout.cshtml
@@ -132,16 +132,8 @@
                                 </div>
                             </div><!-- End .dropdown-menu -->
                         </div><!-- End .compare-dropdown -->
+                        @await Component.InvokeAsync("VcWish")
 
-                        <div class="wishlist">
-                            <a href="wishlist.html" title="Wishlist">
-                                <div class="icon">
-                                    <i class="icon-heart-o"></i>
-                                    <span class="wishlist-count badge">3</span>
-                                </div>
-                                <p>Wishlist</p>
-                            </a>
-                        </div><!-- End .compare-dropdown -->
 
                         @await Component.InvokeAsync("VcCart")
                     </div><!-- End .header-right -->
