--- a/EcommerceSite/Views/Shared/_Layout.cshtml
+++ b/EcommerceSite/Views/Shared/_Layout.cshtml
@@ -113,24 +113,7 @@
                                 </div>
                                 <p>Compare</p>
                             </a>
-
-                            <div class="dropdown-menu dropdown-menu-right">
-                                <ul class="compare-products">
-                                    <li class="compare-product">
-                                        <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
-                                        <h4 class="compare-product-title"><a href="product.html">Blue Night Dress</a></h4>
-                                    </li>
-                                    <li class="compare-product">
-                                        <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
-                                        <h4 class="compare-product-title"><a href="product.html">White Long Skirt</a></h4>
-                                    </li>
-                                </ul>
-
-                                <div class="compare-actions">
-                                    <a href="#" class="action-link">Clear All</a>
-                                    <a href="#" class="btn btn-outline-primary-2"><span>Compare</span><i class="icon-long-arrow-right"></i></a>
-                                </div>
-                            </div><!-- End .dropdown-menu -->
+                            @await Component.InvokeAsync("VcCompare")
                         </div><!-- End .compare-dropdown -->
                         @await Component.InvokeAsync("VcWish")
 
