--- a/EcommerceSite/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/EcommerceSite/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -71,19 +71,19 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="/Admin/Slider/Index"><i class="bx bx-right-arrow-alt"></i>Header</a>
+                            <a href="/Admin/Deals/Index"><i class="bx bx-right-arrow-alt"></i>Header</a>
                         </li>
                         <li>
-                            <a href="/Admin/ProductCategory/Index"><i class="bx bx-right-arrow-alt"></i>Category</a>
+                            <a href="/Admin/Category/Index"><i class="bx bx-right-arrow-alt"></i>Category</a>
                         </li>
                         <li>
-                            <a href="/Admin/Banners/Index"><i class="bx bx-right-arrow-alt"></i>Banners</a>
+                            <a href="/Admin/Product/Index"><i class="bx bx-right-arrow-alt"></i>Products</a>
                         </li>
                         <li>
-                            <a href="/Admin/Category/Index"><i class="bx bx-right-arrow-alt"></i>Products</a>
+                            <a href="/Admin/Fabrica/Index"><i class="bx bx-right-arrow-alt"></i>Fabricas</a>
                         </li>
                         <li>
-                            <a href="/Admin/Service/Index"><i class="bx bx-right-arrow-alt"></i>Services</a>
+                            <a href="/Admin/Property/Index"><i class="bx bx-right-arrow-alt"></i>Home Property</a>
                         </li>
                     </ul>
                 </li>
@@ -96,7 +96,21 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="/Admin/Category/Index"><i class="bx bx-right-arrow-alt"></i>Product</a>
+                            <a href="/Admin/Product/Index"><i class="bx bx-right-arrow-alt"></i>Product</a>
+                        </li>
+
+                    </ul>
+                </li>
+                <li>
+                    <a class="has-arrow" href="javascript:;">
+                        <div class="parent-icon">
+                            <i class="far fa-address-card"></i>
+                        </div>
+                        <div class="menu-title">Category</div>
+                    </a>
+                    <ul>
+                        <li>
+                            <a href="/Admin/Category/Index"><i class="bx bx-right-arrow-alt"></i>Category</a>
                         </li>
 
                     </ul>
@@ -110,7 +124,7 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="/Admin/Blog/Index"><i class="bx bx-right-arrow-alt"></i>Doing</a>
+                            <a href="/Admin/Blog/Index"><i class="bx bx-right-arrow-alt"></i>Blog</a>
                         </li>
 
                     </ul>
@@ -125,12 +139,8 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="/Admin/OurStory/Index"><i class="bx bx-right-arrow-alt"></i>Our Stories</a>
+                            <a href="/Admin/About/Index"><i class="bx bx-right-arrow-alt"></i>About Page</a>
                         </li>
-                        <li>
-                            <a href="/Admin/WhyChoose/Index"><i class="bx bx-right-arrow-alt"></i>Why Choose</a>
-                        </li>
-
                     </ul>
                 </li>
 
@@ -143,10 +153,10 @@
                     </a>
                     <ul>
                         <li>
-                            <a href="/Admin/Question/Index"><i class="bx bx-right-arrow-alt"></i>Question</a>
+                            <a href="/Admin/ContactInformation/Index"><i class="bx bx-right-arrow-alt"></i>Contact INformation</a>
                         </li>
                         <li>
-                            <a href="/Admin/HomeFooters/Index"><i class="bx bx-right-arrow-alt"></i>Home Footer</a>
+                            <a href="/Admin/Stores/Index"><i class="bx bx-right-arrow-alt"></i>our Stores</a>
                         </li>
 
                     </ul>
@@ -191,6 +201,9 @@
                     </a>
                     <ul>
                         <li>
+                            <a href="Admin/Faqcomponent/Login" target="_blank"><i class="bx bx-right-arrow-alt"></i>Faq</a>
+                        </li>
+                        <li>
                             <a href="/Account/Login" target="_blank"><i class="bx bx-right-arrow-alt"></i>Sign In</a>
                         </li>
                         <li>
@@ -204,17 +217,6 @@
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a href="user-profile.html">
-                        <div class="parent-icon">
-                            <i class="bx bx-user-circle"></i>
-                        </div>
-                        <div class="menu-title">User Profile</div>
-                    </a>
-                </li>
-
-
-
                 <li class="menu-label">Others</li>
                 <li>
                     <a href="https://codervent.com/rocker/documentation/index.html" target="_blank">
