--- a/EcommerceSite/Views/Shared/_Layout.cshtml
+++ b/EcommerceSite/Views/Shared/_Layout.cshtml
@@ -113,7 +113,7 @@
                                 </div>
                                 <p>Compare</p>
                             </a>
-                            @await Component.InvokeAsync("VcCompare")
+                            @*@await Component.InvokeAsync("VcCompare")*@
                         </div><!-- End .compare-dropdown -->
                         @await Component.InvokeAsync("VcWish")
 
@@ -133,7 +133,16 @@
                         <nav class="main-nav">
                             <ul class="menu sf-arrows">
                                 <li class="megamenu-container active">
-                                    <a asp-controller="Home" asp-action="Index" >Home</a>
+                                    <a asp-controller="Home" asp-action="Index">Home</a>
+                                </li>
+                                <li>
+                                    <a href="/Product/Index">Product</a>
+                                </li>
+                                <li>
+                                    <a href="/Blog/Index">Blog</a>
+                                </li>
+                                <li>
+                                    <a href="/About/Index">About</a>
                                 </li>
                                 <li>
                                     <a href="#">Pages</a>
@@ -149,12 +158,7 @@
                                         <li><a href="/Faq/Index">FAQs</a></li>
                                     </ul>
                                 </li>
-                                <li>
-                                    <a href="/Product/Index" >Product</a>
-                                </li>
-                                <li>
-                                    <a href="/Blog/Index" >Blog</a>
-                                </li>
+
                                 <li class="megamenu-container active">
                                     <a asp-controller="Contact" asp-action="Index">Contact</a>
                                 </li>
