--- a/EcommerceSite/Views/Compare/Index.cshtml
+++ b/EcommerceSite/Views/Compare/Index.cshtml
@@ -31,6 +31,25 @@
                             {
                                 <span class="old-price">Was $@item.Product.PastPrice</span>
                             }
+                            <section class="section-holder">
+                                <div class="container">
+                                    <div class="row">
+                                        <div class="col-md-4 margin-bm32">
+                                            <div class="pricing-col">
+                                                <h3 class="margin-b32">@item.Product.Name</h3>
+                                                <ul class="price-features">
+                                                    <li>@item.Product.PresentPrice</li>
+                                                </ul>
+                                                <div class="view-more"><a href="#">Learn More</a></div>
+                                            </div>
+                                            <!-- /pricing-col -->
+                                        </div>
+                                    </div>
+                                    <!-- /row -->
+                                </div>
+                                <!-- /container -->
+                            </section>
+
                         </div><!-- End .product-price -->
                     </div><!-- End .product-body -->
                 </div><!-- End .product -->
