--- a/EcommerceSite/Views/Home/Index.cshtml
+++ b/EcommerceSite/Views/Home/Index.cshtml
@@ -38,7 +38,7 @@
                                         </span>
                                     </div><!-- End .intro-price -->
 
-                                    <a href="category.html" class="btn btn-primary btn-round">
+                                    <a href="/Product/Index" class="btn btn-primary btn-round">
                                         <span>Shop More</span>
                                         <i class="icon-long-arrow-right"></i>
                                     </a>
@@ -319,7 +319,7 @@ Arrivals</h2><!-- End .title -->
                                     <span class="old-price">$@item.PastPrice</span>
                                 </div><!-- End .product-price -->
 
-                                <a href="product.html" class="btn btn-link"><span>Shop Now</span><i class="icon-long-arrow-right"></i></a>
+                                <a href="/Product/In dex" class="btn btn-link"><span>Shop Now</span><i class="icon-long-arrow-right"></i></a>
                             </div><!-- End .deal-content -->
 
                             <div class="deal-bottom">
