--- a/EcommerceSite/Views/Product/Details.cshtml
+++ b/EcommerceSite/Views/Product/Details.cshtml
@@ -116,8 +116,8 @@
                                         </div><!-- End .details-action-col -->
 
                                         <div class="details-action-wrapper">
-                                            <a href="#" class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
-                                            <a href="#" class="btn-product btn-compare" title="Compare"><span>Add to Compare</span></a>
+                                            <a asp-controller="Wish" asp-action="Buy" asp-route-id="@item.Id"  class="btn-product btn-wishlist" title="Wishlist"><span>Add to Wishlist</span></a>
+                                            <a asp-controller="Compare" asp-action="Buy" asp-route-id="@item.Id"  class="btn-product btn-compare" title="Compare"><span>Add to Compare</span></a>
                                         </div><!-- End .details-action-wrapper -->
                                     </div><!-- End .product-details-action -->
 
