--- a/EcommerceSite/Views/Compare/Index.cshtml
+++ b/EcommerceSite/Views/Compare/Index.cshtml
@@ -36,7 +36,7 @@
                                     <div class="row">
                                         <div class="col-md-4 margin-bm32">
                                             <div class="pricing-col">
-                                                <h3 class="margin-b32">@item.Product.Name</h3>
+                                                <h3 class="margin-b32">@item.Product.category.Name</h3>
                                                 <ul class="price-features">
                                                     <li>@item.Product.PresentPrice</li>
                                                 </ul>
